# flight-log

./: Dockerfile  GUIDE.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: i18n.js  i18n.ts  index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  FlightLogHook.lua  installer-hooks.nsh  lang-select.wxs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/locales/: en.json  fr.json  ru.json
