[package]
name = "flight-log"
version = "0.1.0"
description = "Flight Log"
authors = []
edition = "2021"

[[bin]]
name = "flight-log"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = { version = "2" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
