[package]
name = "flight-log"
version = "1.0.5"
description = "Flight Log"
authors = []
edition = "2021"

[[bin]]
name = "flight-log"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = { version = "2" }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
